Project

General

Profile

Actions

Bug #17105

closed

multimds: allow_multimds not required when max_mds is set in ceph.conf at startup

Added by Patrick Donnelly over 7 years ago. Updated about 5 years ago.

Status:
Resolved
Priority:
Normal
Category:
-
Target version:
-
% Done:

0%

Source:
Development
Tags:
Backport:
jewel
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
MDSMonitor
Labels (FS):
multimds
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

Problem:

$ vstart.sh -d -l --short -n -o 'max_mds = 3'
[...]
$ ceph status
    cluster 24600546-44d2-41ad-85ba-996b7af1fd73
     health HEALTH_OK
     monmap e1: 3 mons at {a=127.0.0.1:6789/0,b=127.0.0.1:6790/0,c=127.0.0.1:6791/0}
            election epoch 6, quorum 0,1,2 a,b,c
      fsmap e7: 3/3/3 up {0=a=up:active,1=c=up:creating,2=b=up:active}
     osdmap e10: 3 osds: 3 up, 3 in
            flags sortbitwise,require_jewel_osds,require_kraken_osds
      pgmap v13: 24 pgs, 3 pools, 0 bytes data, 0 objects
            550 GB used, 114 GB / 664 GB avail
                  24 active+clean
$ ceph mds set_max_mds 4
Error EINVAL: multi-MDS clusters are not enabled; set 'allow_multimds' to enable

The last command is not the problem. It's just showing what we currently do when trying to set max_mds when the flag is unset. The "issue" is that setting max_mds in the ceph.conf enables multimds but the CEPH_MDSMAP_ALLOW_MULTIMDS is not also set.

Either we should:

  1. Enable allow_multimds by setting the CEPH_MDSMAP_ALLOW_MULTIMDS flag so the administrator can modify max_mds without redundantly setting the flag (because multimds is already enabled even though the flag is unset).
  2. Require a new config option setting allow_multimds in addition to max_mds and reject max_mds otherwise (silently?).

Related issues 1 (0 open1 closed)

Copied to CephFS - Backport #17264: jewel: multimds: allow_multimds not required when max_mds is set in ceph.conf at startupResolvedActions
Actions #1

Updated by Greg Farnum over 7 years ago

I think we want to force users to set multi-mds flags explicitly, not implicitly via the initial config. I'm fine with it being silent if being loud is inconvenient.

Actions #2

Updated by Patrick Donnelly over 7 years ago

  • Status changed from New to Fix Under Review
Actions #4

Updated by John Spray over 7 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #5

Updated by Patrick Donnelly over 7 years ago

  • Release set to jewel
Actions #6

Updated by Loïc Dachary over 7 years ago

  • Backport set to jewel
Actions #7

Updated by Loïc Dachary over 7 years ago

  • Copied to Backport #17264: jewel: multimds: allow_multimds not required when max_mds is set in ceph.conf at startup added
Actions #8

Updated by Loïc Dachary over 7 years ago

  • Status changed from Pending Backport to Resolved
Actions #9

Updated by Patrick Donnelly about 5 years ago

  • Category deleted (90)
  • Labels (FS) multimds added
Actions

Also available in: Atom PDF