multimds: enforce allow_multimds during conf load

Add a configuration option for allow_multimds which allows setting
max_mds. Previously it was possible to set max_mds in ceph.conf which
would circumvent the allow_multimds protection.

Fixes: http://tracker.ceph.com/issues/17105

Signed-off-by: Patrick Donnelly <pdonnell@redhat.com>